k8s/apps/pgadmin/networking/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: pgadmin
  labels:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/component: database-ui
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: pgadmin
