k8s/apps/pgadmin/networking/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: pgadmin
  labels:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/component: database-ui
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pgadmin.int.jigga.xyz
      secretName: pgadmin-tls
  rules:
    - host: pgadmin.int.jigga.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  name: http
